
CMAKE_MINIMUM_REQUIRED( VERSION 2.4 )

PROJECT( lbm_reference )

IF( CMAKE_COMPILER_IS_GNUCC )
  SET( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fmessage-length=0" )
ENDIF( CMAKE_COMPILER_IS_GNUCC )
IF( CMAKE_COMPILER_IS_GNUCXX )
  SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fmessage-length=0" )
ENDIF( CMAKE_COMPILER_IS_GNUCXX )

ADD_SUBDIRECTORY( src )
